--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -10,9 +10,9 @@ loginUrl=https://www.amazon.in/ap/signin?openid.pape.max_auth_age=0&openid.retur
 registrationUrl=https://www.amazon.in/ap/register
 
 # ---------------- Test Data (Demo) ----------------
-validMobile=9696603425        
-validEmail=anand@000singh@gmail.com
-validPassword=@nand23S
+validMobile=your  number        
+validEmail=your email
+validPassword=your pass
 invalidEmail=wronguser@test.com
 invalidPassword=WrongPass123
 
@@ -22,10 +22,10 @@ searchBook1=Atomic Habits
 searchBook2=Clean Code
 
 # ---------------- Registration Test Data ----------------
-regEmail=anand@000singh@gmail.com
-regMobile=9696603425
+regEmail=email
+regMobile=number
 regName=Anand Singh
-regPassword=@nand23S
+regPassword=password
 
 # ---------------- Report Settings ----------------
 reportPath=./reports/
